--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "digi4school to pdf",
   "version": "1.6",
 
-  "author": "strukteon",
+  "author": "MrCodingB",
 
   "description": "Converts digi4school books to pdf so they can be used offline.",
   "homepage_url": "https://github.com/strukteon/digi4school-to-pdf",
@@ -14,34 +14,22 @@
     "512": "assets/icon-512.png"
   },
 
-  "permissions": ["activeTab", "tabs", "scripting"],
+  "permissions": ["activeTab", "tabs"],
 
   "browser_action": {
     "default_icon": "assets/icon-64.png",
     "default_title": "digi4school to pdf",
-    "default_popup": "popup/popup.html"
+    "default_popup": "popup.html"
   },
 
   "content_scripts": [
     {
       "matches": ["https://*/ebook/*"],
-      "js": [
-        "libraries/pdfkit.standalone.min.js",
-        "libraries/svg-to-pdfkit.min.js",
-        "libraries/saveSvgAsPng.js",
-        "libraries/materialize/materialize.min.js",
-        "modal/showModal.js",
-        "scripts/d4s_detection.js",
-        "scripts/inject.js"
-      ],
-      "css": [
-        "libraries/materialize/materialize.min.css",
-        "modal/modal.css"
-      ]
+      "js": ["bundle.js"]
     }
   ],
 
   "background": {
-    "scripts": ["libraries/browser-polyfill.min.js", "scripts/background.js"]
+    "scripts": ["bundle.js"]
   }
 }
