--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,10 @@
     "sourceMap": true,
     "strict": true,
     "target": "ES5",
-    "typeRoots": ["node_modules/@types"]
+    "typeRoots": ["node_modules/@types"],
+    "paths": {
+      "save-svg-as-png": ["save-svg-as-png/index.d.ts"]
+    }
   },
   "include": ["src"]
 }
